# iPic3D

./: CMakeLists.txt  README  README.txt  iPIC3D.cpp  iPic3D.cpp  makefile  makefile.knc  makefile.mic
ConfigFile/src/: ConfigFile.cpp
H5hut-io/: CMakeLists.txt
H5hut-io/src/: H5hut-io.cpp
PSKOutput3D/: PSKhdf5adaptor.cpp
bc/: BcFields3D.cpp
build.xeon/: HOWTO  cmake-configure
build.xeonphi/: HOWTO  cmake-clean  cmake-configure  job.sh  machinefile  run  run_fields.sh  setjob  slurm-4214135.out  spawnfile
cmake/: cmake_template.cmake.Xeon  cmake_template.cmake.Xeon.stampede  cmake_template.cmake.XeonPhi  cmake_template.cmake.XeonPhi.stampede
communication/: BlockCommunicator.cpp  ComBasic3D.cpp  ComBasic3D.h  ComInterpNodes3D.cpp  ComNodes3D.cpp  ComNodes3D.h  ComParser3D.cpp  ComParticles3D.cpp  VCtopology3D.cpp
env/: bashrc
env/deep/: ipic  ipic-offload  ipic-parallel  ipicrun15x15meshjob  job.sh
env/judge/: ipic  ipic-base  ipic-parallel  ipicrun15x15meshjob  job.sh
env/miclogin/: ipic  ipic-base  ipic-mic  ipic-mic-base  ipic-mic-base2  ipic-mic-nohdf5  ipic-mic-parallel  ipic-mic-parallel2  ipic-mic2  ipic-nohdf5  ipic-parallel
env/miclogin/old/: ipic-mic-base
env/pfe/: ipic
env/stampede/: ipic  ipic-base  ipic-mic  ipic-mic-base  ipic-nohdf5  ipic-parallel  ipic-setjob  ipic-show-getstripe  ipic-show-setstripe  ipicrun15x15meshjob  isession  job.sh
fields/: EMfields3D.cpp  EMfields3D.h  Moments.cpp
grids/: Grid3DCU.cpp  Grid3DCU.h
include/: Alloc.h  Basic.h  BcFields3D.h  BcParticles.h  BlockCommunicator.h  CG.h  Collective.h  ComBasic3D.h  ComInterpNodes3D.h  ComNodes3D.h  ComParser3D.h  ComParticles3D.h  Communicator.h  Connection.h  EMfields3D.h  Field.h  GMRES.h  Grid3DCU.h  IDgenerator.h  Kinetics.h  Larray.h  MImoments.h  MIsolver.h  MPIdata.h  Moments.h  OutputWrapperFPP.h  OutputWrapperTXT.h  PSKOutput.h  PSKhdf5adaptor.h  ParallelIO.h  Parameters.h  Particle.h  ParticleGrid.h  Particles.h  Particles3D.h  Particles3Dcomm.h  PclBins.h  Restart3D.h  Setting.h  SpeciesMoms.h  (+26 more)
inputfiles/: GEM.inp  Random.inp
inputoutput/: Collective.cpp  NOTES.txt  OutputWrapperFPP.cpp  OutputWrapperTXT.cpp  ParallelIO.cpp  Restart3D.cpp  WriteOutputParallel.cpp  ipic_output.cpp  phdf5.cpp
io/: NOTES.txt  OutputWrapperTXT.cpp  ipic_output.cpp
main/: CMakeLists.txt  Collective.cpp  Kinetics.cpp  MIsolver.cpp  Parameters.cpp  Setting.cpp  Solver.cpp  iPic3Dlib.cpp
mic/: hdf5_symbols.c
particles/: Particles3D.cpp  Particles3Dcomm.cpp
performances/: Timing.cpp
processtopology/: VCtopology3D.h  VirtualTopology3D.h
scripts/: ipic-setinp  ipic-setjob-helper  ipic.py  ipicrun15x15mesh  ipicrun15x15meshGEMinp  ipicrun15x15meshinp
solvers/: CG.cpp  GMRES.cpp
sysenv/deep/: ipic  job.sh
sysenv/miclogin/: ipic  ipic-mic  ipic-mic-base  ipic-mic-parallel  ipic-parallel  mic.rc  xeon.rc
tests/: CMakeLists.txt  Makefile  stopwatch.h  test.cpp  test_arrays.cpp  test_class_structure.cpp  test_mic_particles.cpp  test_particles.cpp  testcomm.cpp  testspawn.cpp  testv.cpp  testv2.cpp  testvbasic.cpp  testvtrans.cpp
tests/test_striping/: Makefile  basic.c
unused/fields/: EMfields3D.cpp
unused/makefiles/: makefile.knc  makefile.macbook  makefile.mic
unused/particles/: Particles3D.cpp
utility/: Alloc.h  Basic.cpp  IDgenerator.cpp  MPIdata.cpp  TimeTasks.cpp  debug.cpp  diagnostics.cpp  errors.cpp
